Apr 20, 2002: Jordi Mallach <jordi@sindominio.net>
- updated Spanish translation

Mar 17, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- added navy seals gametype
- added RTCW protocol 58 to preferences
- added a server_unref so old servers no longer pile up in srvinfo.gz
- added player statistics per OS
- updated german translation

Feb 28, 2002: Jordi Mallach <jordi@sindominio.net>
- updated copyright notice in about dialog
- updated Spanish translation.

Feb 17, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- support for LAN broadcast queries

Feb 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- check for correct version of qstat on startup

Feb 12, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- reworked dialog for adding master
- added popup menu for master server tree
- added function for renaming master servers

Feb 01, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix display of gametypes > MAX_Q3A_TYPES

Jan 17, 2002: Jordi Mallach <jordi@sindominio.net>
- updated NEWS for 0.9.9.

Jan 05, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- removed not working Tribes2 masterservers and added a new one
- wrote new function for parsing Tribes2 player info
- changed version to 0.9.9b

Jan  2, 2002: Jordi Mallach <jordi@sindominio.net>
- Spanish update

Dec 30, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- changed textentries to comboboxes for q3/wolf protocol selection

Dec 28, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gametypes for truecombat
- wrote function for determining the gametype to get rid of all
  those ugly else if's

Dec 27, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added 20sec timeout for wget
- support for Voyager Elite Force
- changed some internals for statistics
- removed 2 not working q3 masters
- added gameaholic lists for voyager and q3a
- renamed T/O -> Timeout
- added tribes2 statistics, only 25% servers are running linux :-(

Dec 23, 2001: Ludwig Nussel <l-n@users.sourceforge.net>