@@ -1,4 +1,4 @@
 man_MANS = xqf.6
-EXTRA_DIST = BUGS acconfig.h autogen.sh clean.sh $(man_MANS)
+EXTRA_DIST = BUGS autogen.sh clean.sh $(man_MANS)
 
 SUBDIRS = intl po src docs
