@@ -16,11 +16,14 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
  */
 
+#include "gnuconfig.h"
+
 #include <sys/types.h>
 #include <string.h>	/* strlen, strstr, strcpy */
 
 #include <gtk/gtk.h>
 
+#include "i18n.h"
 #include "game.h"
 #include "history.h"
 #include "dialogs.h"
